fixes spacings

--- a/style.css
+++ b/style.css
@@ -16,15 +16,14 @@ label {
     padding-right: 5%;
 }
 .buttons {
-    margin-top: 9%;
+    margin-top: 2%;
     margin-left: 37.5%;
 }
 #sketchpad {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 0 auto;
     margin-top: 5%;
-    width: 500px;
-    height: 500px;
+    width: 768px;
+    height: 576px;
     background-color: #ffffff;
     display: flex;
 }
